fixed tag-list wrapping

--- a/src/sass/lodgepole/_parts/_content.scss
+++ b/src/sass/lodgepole/_parts/_content.scss
@@ -44,8 +44,9 @@
 
 .tag-list {
 	padding: 0;
-	margin: 0 0 2rem 0;
-	display: block;
+	margin: 0 -0.25em 2rem -0.25em;
+	display: flex;
+	flex-wrap: wrap;
 	width: 100%;
 
 	> li {
@@ -53,15 +54,11 @@
 		font-family: $primary-font;
 		margin: 0.25rem;
 		padding: 0.25em 1em;
-		background-color: var(--color1);
+		background-color: var(--olive);
 		font-size: 1em;
 		border-radius: 100px;
 		line-height: 1.5;
 		color: white;
-
-		&:first-child {
-			margin-left: 0;
-		}
 	}
 
 	@media (prefers-color-scheme: dark){
